	ValueGrid2DPortrayal3D should now be able to handle ObjectGrid2D as well (using
		the Valuable interface).
	New look for Display2D and Display3D: step field compressed into a single icon, which
		makes the window work better with small sizes.
	Updates to ChartGenerator to allow compatibility with newer versions of JFreeChart
		(which will be distributed with MASON from here on out).  Also added the ability
		to turn on/off grid lines in ChartGenerator.
	Fixed the 'ONLY' mechanism in simulation.classes
	Added methods to Console to enable turning on or off the New Simulation... menu.
	Major modifications to the Charting facility to clean it up and make it easier to add
		new charts.  This will modify the API a bit -- we've also modified the howto.html
		file to reflect the (small) changes that need to be made if you create a chart
		programmatically.
	Added Scatter Plots
	Modified Flockers to include two model elements which show off Scatter Plots
	Added the ability to draw a thin frame around Continuous2D.
	Bag, DoubleBag, and IntBag can be initialized with null passed in.
	Added DenseGrid2D, DenseGrid2DPortrayal, and HexaDenseGrid2DPortrayal
	Reindented
	BugFix to [Int|Double|]Bag.addAll method -- inserting in the middle of the Bag wasn't
		shifting elements over properly.  Thanks to Guoqiang Zhang 
		<zgqoop_cn@hotmail.com>
	Made Edge Comparable
	Changed the slider so that it prints only a few decimal places when modifying a 
		double. The number of decimal places is chosen to be the minimum necessary 
		to show a change of size epsilon, which is the smallest increment the user 
		can make by dragging the slider. Epsilon is determined by the range of the 
		slider and its width, in pixels.
	Modified EdgePortrayal2D to allow the width of the triangle or line to change depending
		on the value of the Edge.
	Documentation fixes to sim.util.Distribution [CERN's not very careful].  Thanks to 
		Ben Stabile <bennett.stabile@GMAIL.COM>